edit data table พี่ฟ้าครับผม

--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-5/int06-5.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-5/int06-5.component.html
@@ -110,7 +110,7 @@
 
     <div class="ui grid">
             <div class="sixteen wide center aligned column">
-                <button class="ui mini yellow button" (click)="exportFile()">
+                <button class="ui mini yellow button" (click)="exportFile()" [disabled]="dataInTable.length == 0">
                         <i class="print icon"></i>
                     ส่งออก</button>
             </div>
