--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-6/int06-6.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-6/int06-6.component.html
@@ -93,16 +93,16 @@
 
 <div class="ui segment">
     <table id="dataTable" class="ui small celled table striped selectable nowrap" style="width: 100%;">
-        <thead>
+        <thead>											
             <tr>
-                <th style="text-align: center !important">ลำดับ</th>
-                <th style="text-align: center !important">วันที่สั่งจ่าย</th>
-                <th style="text-align: center !important">เช็คเล่มที่</th>
-                <th style="text-align: center !important">ชื่อธนาคาร</th>
-                <th style="text-align: center !important">จำนวนเงินสั่งจ่ายในเช็ค</th>
-                <th style="text-align: center !important">ประเภทงบประมาณ</th>
-                <th style="text-align: center !important">รายการ</th>
+                <th style="text-align: center !important">ลำดับที่</th>
                 <th style="text-align: center !important">ผู้รับเงิน</th>
+                <th style="text-align: center !important">เลขที่บัญชี</th>
+                <th style="text-align: center !important">ประเภทค่าใช้จ่าย</th>
+                <th style="text-align: center !important">รายการ</th>
+                <th style="text-align: center !important">จำนวนเงิน</th>
+                <th style="text-align: center !important">วันที่โอน</th>
+           
             </tr>
         </thead>       
     </table>
