add menu mockup ตรวจสอบพัสดุ

--- a/workspace/ims-client/src/app/app.component.html
+++ b/workspace/ims-client/src/app/app.component.html
@@ -80,8 +80,8 @@
                             <i class="dropdown icon "></i> ตรวจสอบแสตมป์
                             <div class="menu ">
                                 <a class="item "  [routerLink]="[ '/int05/1/1'] " *ngIf="authService.renderByPage('int05/1/1')" routerLinkActive="active ">ตรวจสอบแสตมป์</a>
-                                <a class="item "routerLinkActive="active ">งบเดือนการรับ-จ่ายแสตมป์</a>                               
-                                <a class="item "routerLinkActive="active ">บัญชีคุมการรับ-จ่ายแสตมป์</a>    
+                                <a class="item  "  [routerLink]="[ '/int05/2'] " *ngIf="authService.renderByPage('int05/2')" routerLinkActive="active ">งบเดือนการรับ-จ่ายแสตมป์</a>                               
+                                <a class="item "  [routerLink]="[ '/int05/2/1'] " routerLinkActive="active ">บัญชีคุมการรับ-จ่ายแสตมป์</a>    
                             </div>
                         </div>
 
