updated modal epa

--- a/workspace/ims-client/src/app/buckwaframework/project/export-audit/epa01/epa01-1/epa01-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/export-audit/epa01/epa01-1/epa01-1.component.html
@@ -6,7 +6,7 @@
 
   <div class="ui grid center aligned">
     <div class="sixteen wide column">
-      <h3>ค้นหาข้อมูลแบบคำขอยกเว้นหรือคืนภาษี (ภส.05-01)" </h3>
+      <h3>ค้นหาข้อมูลแบบคำขอยกเว้นหรือคืนภาษี (ภส.05-01)</h3>
     </div>
   </div>
   <br>
