--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-6/int06-6.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-6/int06-6.component.html
@@ -83,7 +83,7 @@
                 </div><br>
                 <div class="ui stackable center aligned page grid">
                     <button class="ui mini primary button" type="button" (click)="search()"><i class="search icon"></i>ค้นหา</button>
-                    <button class="ui mini gray button " type="button" (click)="clear()"><i class="delete icon"></i>ล้างข้อมูล</button>
+                    <button class="ui mini gray button " type="button" (click)="clear()"><i class="refresh icon"></i>ล้างข้อมูล</button>
                 </div><br>
             </form>
 
@@ -109,7 +109,7 @@
 
     <div class="ui grid">
         <div class="sixteen wide center aligned column">
-            <button class="ui mini yellow button " (click)="exportFile()">ส่งออก</button>
+            <button class="ui mini yellow button " (click)="exportFile()"><i class="print icon"></i>ส่งออก</button>
         </div>
     </div>
 </div>
