--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-1/int09-1-1/int09-1-1-1/int09-1-1-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-1/int09-1-1/int09-1-1-1/int09-1-1-1.component.html
@@ -91,7 +91,7 @@
 
 <!-- add modal -->
 <div class="ui large modal transition hidden" id='modalAdd'>
-  <div class="header" style="text-align: center !important;">
+  <div class="header" style="text-align: center !important;background: #1e83db;color: white">
     ระบุรายละเอียดค่าใช้จ่ายในการเดินทางไปราชการ
   </div>
 
@@ -437,7 +437,7 @@
 <!-- add Haed modal -->
 <div class="ui large modal  transition hidden" id='modalAddHead'>
 
-  <div class="header" style="text-align: center !important;">
+  <div class="header" style="text-align: center !important;background: #1e83db;color: white">
     ระบุรายละเอียดหัวกระดาษประมาณการค่าใช้จ่ายในการเดินทางไปราชการ
   </div>
 
