--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-1/int09-1-1/int09-1-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-1/int09-1-1/int09-1-1.component.html
@@ -82,7 +82,7 @@
 <!-- add modal -->
 <div class="ui large modal transition hidden" id='modalAddDocument'>
 
-  <div class="header" style="text-align: center !important;">
+  <div class="header" style="text-align: center !important;background: #1e83db;color: white">
     เลือกประเภทเอกสาร
   </div>
 
