--- a/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop07/cop07-1/cop07-1-1/cop07-1-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop07/cop07-1/cop07-1-1/cop07-1-1.component.html
@@ -7,15 +7,14 @@
 
 <div class="ui attached  segment">
   <br>
-  <div class="inline fields" style="text-align: center !important;">แผนปฏิบัติการ เดือน &nbsp; {{fiscalYear}}</div>
+  <div class="inline fields" style="text-align: center !important;">แผนปฏิบัติการ เดือน &nbsp; {{fiscalYearText}}</div>
   <div class="inline fields" style="text-align: center !important;">ตามแผนปฏิบัติการ &nbsp; {{asPlanNumber}} &nbsp; ราย</div>
   <div class="inline fields" style="text-align: center !important;">นอกแผนปฏิบัติการ &nbsp; {{outsidePlanNumber}} &nbsp; ราย</div>
   <br>
   <div class="inline fields" style="text-align: center !important;">
-    <button class="mini ui yellow button">
-      <i class="edit icon"></i>แก้ไขจำนวนแผนปฏิบัติการ</button>
-    <button class="ui mini green button" type="button" (click)="modalAddDocument()">
-      <i class="plus icon"></i>เพิ่มข้อมูล</button>
+    <!-- <button class="mini ui yellow button">
+      <i class="edit icon"></i>แก้ไขจำนวนแผนปฏิบัติการ</button> -->
+      <button class="ui mini green button" type="button" (click)="modalAdd()"><i class="plus icon"></i>เพิ่มข้อมูล</button>
   </div>
 </div>
 <br>
@@ -47,63 +46,98 @@
   <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
     <span>รายละเอียดนอกแผนปฏิบัติการ</span>
   </div>
-  <form id="upload-form" ngNativeValidate (submit)="onUpload($event)">
-    <div class="ui attached  segment">
-      <div class="ui form center aligned" ngNativeValidate>
+  <div class="ui attached  segment">
+    <div class="ui form center aligned" ngNativeValidate>
 
-        <br>
-        <table id="tableData2" class="ui small celled table nowrap striped selectable" style="width: 100%">
-          <thead>
-
-            <tr>
-                <th style="text-align: center !important;">ลำดับ</th>
-                <th style="text-align: center !important;">เลขที่ผู้ประกอบการ</th>
-                <th style="text-align: center !important;">ชื่อผู้ประกอบการ</th>
-                <th style="text-align: center !important;">สถานที่ตั้งของผู้ประกอบการ</th>
-                <th style="text-align: center !important;">วันที่ตรวจ</th>
-                <th style="text-align: center !important;">แผนปฏิบัติการ</th>
-                <th style="text-align: center !important;">สถานะ</th>
-                <th style="text-align: center !important;width:180px !important">จัดการ</th>
-            </tr>
-
-          </thead>
-        </table>
-      </div>
-      <div class="ui form center aligned grid">
-        <button class="ui mini button" type="button" (click)="clickBack()">
-          <i class="close icon"></i>ยกเลิก</button>
-      </div>
       <br>
-      <br>
-    </div>
-  </form>
-  <!-- add modal -->
-  <div class="ui large modal transition hidden" id='modalAddDocument'>
+      <table id="tableData2" class="ui small celled table nowrap striped selectable" style="width: 100%">
+        <thead>
 
-    <div class="header" style="text-align: center !important;">
-        เพิ่มข้อมูล
-    </div>
+          <tr>
+            <th style="text-align: center !important;">ลำดับ</th>
+            <th style="text-align: center !important;">เลขที่ผู้ประกอบการ</th>
+            <th style="text-align: center !important;">ชื่อผู้ประกอบการ</th>
+            <th style="text-align: center !important;">สถานที่ตั้งของผู้ประกอบการ</th>
+            <th style="text-align: center !important;">วันที่ตรวจ</th>
+            <th style="text-align: center !important;">แผนปฏิบัติการ</th>
+            <th style="text-align: center !important;">สถานะ</th>
+            <th style="text-align: center !important;width:180px !important">จัดการ</th>
+          </tr>
 
-    <div class="content">
-      <div class="ui form">
+        </thead>
+      </table>
+    </div>
+    <div class="ui form center aligned grid">
+      <button class="ui mini button" type="button" (click)="clickBack()">
+        <i class="close icon"></i>ยกเลิก</button>
+    </div>
+    <br>
+    <br>
+  </div>
+<!-- add modal -->
+<div class="ui large modal transition hidden" id='modalAdd'>
+  <div class="header" style="text-align: center !important;background: #1e83db;color: white">
+    ระบุรายละเอียด
+  </div>
+
+  <div class="scrolling content">
+    <form id="addModal-form" ngNativeValidate>
+      <div class="ui form center aligned">
+
+        <input type="hidden" id="id">
+        <input type="hidden" id="idMaster">
+        <input type="hidden" id="fiscalyear">
+
         <div class="inline fields">
-          <div class="three wide field"></div>
-          <div class="two wide field">
-            <label>ประเภทเอกสาร</label>
+          <div class="two wide field"></div>
+          <div class="three wide field right aligned">
+            <label>เลขที่ผู้ประกอบการ</label>
           </div>
-          <div class="six wide field">
-            <select class="ui dropdown search selection" id="documentType" id="documentType" style="width:100%">
+          <div class="three wide field">
+            <select class="ui dropdown" id="entrepreneurNo" name="entrepreneurNo" style="width: 100%">
               <option value="">กรุณาเลือก</option>
-              <option *ngFor="let data of documentTypeList" value="{{data.lovId}}">{{data.typeDescription}}</option>
+              <option *ngFor="let data of entrepreneurNoList">{{data}}</option>
             </select>
           </div>
-        </div>
-      </div>
-    </div>
 
-    <div class="actions">
-      <div class="ui red deny button">ยกเลิก</div>
-      <div class="ui green button" (click)="addDocument()">ตกลง</div>
-    </div>
+          <div class="three wide field ui right aligned">
+            <label>วันที่ตรวจ</label>
+          </div>
+          <div class="three wide field">
+            <div class="ui calendar" id="modalDate1" style="width: 100%">
+              <div class="ui input left icon">
+                <i class="calendar alter nate outline icon"></i>
+                <input type="text" name="date-raw" id="checkDate" autocomplete="off" [attr.readonly]="null" placeholder="วว/ดด/ปปปป"
+                  [attr.required]="true">
+              </div>
+            </div>
+          </div>
+
+        </div>
+
+        <div class="inline fields">
+            <div class="two wide field"></div>
+            <div class="three wide field right aligned">
+              <label>แผนปฏิบัติการ</label>
+            </div>
+            <div class="three wide field">
+              <select class="ui dropdown" id="actionPlan" name="actionPlan" style="width: 100%">
+                <option value="">กรุณาเลือก</option>
+                <option *ngFor="let data of actionPlanList" value="{{data.lovId}}">{{data.subTypeDescription}}</option>
+              </select>
+            </div>
+  
+          </div>
+
+        <br>
+      </div>
+    </form>
   </div>
-  <!--End add modal -->
+
+  <div class="actions">
+    <div class="ui mini primary button" *ngIf=" btnModal=='S' " (click)="saveData()"><i class="save icon"></i>บันทึก</div>
+    <div class="ui mini deny button"><i class="close icon"></i>ยกเลิก</div>
+    <div class="ui mini yellow button" *ngIf=" btnModal=='E' " (click)="editData()"><i class="edit icon"></i>ดำเนินการแก้ไข</div>
+  </div>
+</div>
+<!--End add modal -->
