--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-1/int09-1-1/int09-1-1-3/int09-1-1-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-1/int09-1-1/int09-1-1-3/int09-1-1-3.component.html
@@ -68,7 +68,7 @@
 
 <!-- add modal -->
 <div class="ui large modal transition hidden" id='modalAdd'>
-  <div class="header" style="text-align: center !important;">
+  <div class="header" style="text-align: center !important;background: #1e83db;color: white">
     ระบุรายละเอียดค่าใช้จ่ายในการเดินทางไปราชการ
   </div>
 
@@ -414,7 +414,7 @@
 <!-- add Haed modal -->
 <div class="ui large modal  transition hidden" id='modalAddHead'>
 
-  <div class="header" style="text-align: center !important;">
+  <div class="header" style="text-align: center !important;background: #1e83db;color: white">
     ระบุรายละเอียดหัวกระดาษหลักฐานการจ่ายเงินค่าใช้จ่ายในการเดินทางไปราชการ
   </div>
 
