fix bug int07-6

--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int07/int07-6/int07-6.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int07/int07-6/int07-6.component.html
@@ -39,7 +39,7 @@
   
   <div class="sixteen wide column " id="boxEdit">
       <div class="ui top centered attached header segment " style="background: #1e83db;color: white">
-          <span>* แสดงตัวอย่างไฟล์ที่อัพโหลด  และแก้ไขได้</span>
+          <span>ข้อมูลการอัปโหลด</span>
       </div>
       <div class="ui attached segment {{loading? 'loading': ''}}">
         <table id="dataTable"  class="ui small celled table striped selectable" style="width: 100%;">
@@ -54,7 +54,7 @@
               <th  rowspan="2" style="text-align: center !important" >หน่วยเบิกจ่าย</th>
               <th  colspan="2" style="text-align: center !important">ผ่านรายการ</th>
               <th  rowspan="2" style="text-align: center !important" >ยกยอดไป</th>
-              <th  rowspan="2" style="text-align: center !important">แก้ไข</th>
+              <!-- <th  rowspan="2" style="text-align: center !important">แก้ไข</th> -->
             </tr>
             <tr>
               <th style="text-align: center !important; border-left: 1px solid rgba(34,36,38,.1) !important">เดบิต</th>
@@ -73,7 +73,7 @@
         </div>
       </div>
       <!-- modal Edit -->
-      <div class="ui modal" id="editData" >
+      <!-- <div class="ui modal" id="editData" >
         <div class="header">แก้ไขข้อมูล</div>
         <div class="content">
           
@@ -139,10 +139,10 @@
                   <i class="checkmark icon"></i>
               </div>
         </div>
-      </div>
+      </div> -->
 
       <!-- modal del -->
-      <div class="ui mini modal" id="delData" >
+      <!-- <div class="ui mini modal" id="delData" >
         <div class="header">ลบข้อมูล</div>
         <div class="content"> 
             <label>คุณต้องการลบข้อมูลหรือไม่ ?</label>
@@ -156,14 +156,14 @@
                 <i class="checkmark icon"></i>
             </div>
         </div>
-      </div>
+      </div> -->
 
   </div>
      
   <!-- table datatableCheck -->
   <div class="sixteen wide column" id="boxCheck">
     <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
-        <span>* ตรวจสอบข้อมูล </span>
+        <span>ตรวจสอบการนำส่งเงินบัญชีเจ้าหนี้ อปท.</span>
     </div>
     <div class="ui attached segment {{loading? 'loading': ''}}">
       <table id="datatableCheck"  class="ui small celled table striped selectable" style="width: 100%;">
@@ -188,13 +188,13 @@
 
       <div class="ui six column centered grid">
         <div class="column">
-          <button class="ui mini button"    (click)="backPage()" >
-            <i class="arrow left icon"></i>
-            กลับ
-          </button>
           <button class="ui mini primary button"  >
             <i class="print icon"></i>
             ส่งออก
+          </button>
+          <button class="ui mini button"    (click)="backPage()" >
+            <i class="remove icon"></i>
+            ยกเลิก
           </button>
         </div>
       </div>
