--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int07/int07-6/int07-6.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int07/int07-6/int07-6.component.html
@@ -23,7 +23,7 @@
           <div class="sixteen wide column">
             <button class="ui mini primary button" type="submit">
               <i class="upload icon"></i>
-              อัพโหลด
+              อัปโหลด
             </button>
             <button class="ui mini button" type="reset" (click)="clearData()" >
               <i class="refresh icon"></i>
