--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int07/int07-6/int07-6.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int07/int07-6/int07-6.component.html
@@ -21,7 +21,7 @@
 
         <div class="ui center aligned grid">
           <div class="sixteen wide column">
-            <button class="ui mini primary button" type="submit">
+            <button class="ui mini yellow button" type="submit">
               <i class="upload icon"></i>
               อัปโหลด
             </button>
